--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BALL & PADDLE GAME</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div class="container">
+      <h1>Start</h1>
+    </div>
+    <canvas id="gameCanvas" width="1280" height="660"></canvas>
     <script src="./app.js"></script>
   </body>
 </html>
