--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BALL & PADDLE GAME</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>Ball Paddle GAME</h1>
+      <p>Move the mouse in canvas area up and down to move your PADDLE</p>
+    </div>
+
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+
     <script src="./app.js"></script>
   </body>
 </html>
