--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>Move the mouse in canvas area up and down to move your PADDLE</p>
     </div>
 
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <canvas id="gameCanvas" height="500" width="800"></canvas>
 
     <script src="./app.js"></script>
   </body>
